# climex

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/climex/: __init__.py  climex.py  load_data.py
tests/: test_climex.py
