[tool.poetry]
name = "climex"
version = "0.1.0"
description = "Download climatic dataset of mexico"
authors = ["Felipe Antonio Dzul Manzanilla"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
